--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Penis'
 - !lcsh 'Voles'
 - !lcsh 'Lemmings'
+- GITenberg
 title: The Baculum in Microtine Rodents
 url: http://www.gutenberg.org/ebooks/38021
